headers_lib: rename Android.bp
Rename Android.bp to Androidbp. This is done to
avoid compilation failure reported for SA* targets.

Ignore tracking of Android.bp link file.

Change-Id: Ie36f8bf5e0ac011e5f82e4cbd3c2cc7d6bf14070
Signed-off-by: Prateek Sood <prsood@codeaurora.org>
Signed-off-by: Naitik Bharadiya <bharad@codeaurora.org>

--- a/.gitignore
+++ b/.gitignore
@@ -155,9 +155,7 @@ kernel/configs/android-*.cfg
 # Kernel compilation output directory
 out/
 
-# Wireguard
-net/wireguard/
-
-# Build script and changelog generator
-build.sh
-changelog.sh
+#
+#Ignoring Android.bp link file
+#
+Android.bp
