--- a/arch/arm64/configs/radioactive_defconfig
+++ b/arch/arm64/configs/radioactive_defconfig
@@ -3,7 +3,6 @@
 #
 CONFIG_HAPTIC_FEEDBACK_DISABLE=y
 CONFIG_FORCE_FAST_CHARGE=y
-CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
 CONFIG_EXFAT_VIRTUAL_XATTR=y
 CONFIG_EXFAT_VIRTUAL_XATTR_SELINUX_LABEL="u:object_r:exfat:s0"
 CONFIG_DYNAMIC_FSYNC=y
@@ -65,8 +64,6 @@ CONFIG_PCI_MSM=y
 CONFIG_PCI_MSM_MSI=y
 CONFIG_SCHED_MC=y
 CONFIG_NR_CPUS=8
-CONFIG_HZ_300=y
-CONFIG_HZ=300
 CONFIG_SECCOMP=y
 CONFIG_OKL4_GUEST=y
 # CONFIG_UNMAP_KERNEL_AT_EL0 is not set
@@ -665,6 +662,8 @@ CONFIG_ANDROID_BINDERFS=y
 # CONFIG_NVMEM_SYSFS is not set
 CONFIG_QCOM_QFPROM=y
 CONFIG_NVMEM_SPMI_SDAM=y
+CONFIG_CORESIGHT_PLACEHOLDER=y
+CONFIG_CORESIGHT_AMBA_PLACEHOLDER=y
 CONFIG_SLIMBUS_MSM_NGD=y
 CONFIG_ESOC=y
 CONFIG_ESOC_DEV=y
