--- a/arch/arm64/configs/radioactive_defconfig
+++ b/arch/arm64/configs/radioactive_defconfig
@@ -53,7 +53,7 @@ CONFIG_EMBEDDED=y
 CONFIG_SLAB_FREELIST_RANDOM=y
 CONFIG_SLAB_FREELIST_HARDENED=y
 CONFIG_PROFILING=y
-CONFIG_WIREGUARD=y
+CONFIG_WIREGUARD=n
 # CONFIG_WIREGUARD_DEBUG is not set
 # CONFIG_ZONE_DMA32 is not set
 # CONFIG_HOTPLUG_SIZE_BITS is not set
